<?xml version="1.0" encoding="utf-8"?>

<!--
Author: Tyrel Munro
Last updated: 4 December 2020
    Add Music - Local Files page
        ConstraintLayout
        ImageView and TextView which says "Select one or more songs, albums, etc."
        ImageView button and TextView that when pressed sends the user back to the library.
        ImageView button and TextView for the Songs menu.
        ImageView button and TextView for the Albums menu.
        ImageView button and TextView for the Artists menu.
        ImageView button and TextView for the Playlists menu.
        ImageView button and TextView for the Folders menu.
-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:paddingBottom="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_queue_music_24"
        android:contentDescription="@string/add_music_hint" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="50dp"
        android:paddingEnd="0dp"
        android:paddingBottom="10dp"
        android:text="@string/add_music_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back_arrow_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/back_arrow_image"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/library_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="25dp"
                android:paddingTop="15dp"
                android:paddingEnd="0dp"
                android:text="@string/library" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <ImageView
                android:id="@+id/songs_image"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:contentDescription="@string/songs_image"
                app:srcCompat="@drawable/ic_baseline_music_note_24" />

            <TextView
                android:id="@+id/songs_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="25dp"
                android:paddingTop="15dp"
                android:paddingEnd="0dp"
                android:text="@string/songs" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <ImageView
                android:id="@+id/albums_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/albums_image"
                app:srcCompat="@drawable/ic_baseline_album_24" />

            <TextView
                android:id="@+id/albums_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="25dp"
                android:paddingTop="15dp"
                android:paddingEnd="0dp"
                android:text="@string/albums" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:id="@+id/artists_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/artists_image"
                app:srcCompat="@drawable/ic_baseline_mic_24" />

            <TextView
                android:id="@+id/artists_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="25dp"
                android:paddingTop="15dp"
                android:paddingEnd="0dp"
                android:text="@string/artists" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <ImageView
                android:id="@+id/playlists_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/playlists_image"
                app:srcCompat="@drawable/ic_baseline_playlist_play_24" />

            <TextView
                android:id="@+id/playlists_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="25dp"
                android:paddingTop="15dp"
                android:paddingEnd="0dp"
                android:text="@string/playlists" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <ImageView
                android:id="@+id/folders_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/folders_image"
                app:srcCompat="@drawable/ic_baseline_folder_24" />

            <TextView
                android:id="@+id/folders_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="25dp"
                android:paddingTop="15dp"
                android:paddingEnd="0dp"
                android:text="@string/folders" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>