<?xml version="1.0" encoding="utf-8"?>

<!--
Author: Tyrel Munro
Last updated: 10 November 2020
    Schedule questions page
        ConstraintLayout
        TextView for the "Schedule" question page.
        TextView that asks the user, "What would you like to call your sleep schedule?".
        EditText that allows the user to enter the name for their sleep schedule.
        TextView that asks the user, "What time do you go to bed?".
        EditText that allows the user to enter a time.
        TextView that asks the user, "What time would you like to wake up?"
        EditText that allows the user to enter a time.
        TextView that asks the user, "On which days?".
        Chip group that allows user to pick which days that the specific bedtime and wake up times apply.
        Button for the user to press to continue to the falling asleep questions page.
-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".controller.MainActivity" >

    <TextView
        android:id="@+id/schedule_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule_questions"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".2" />

    <TextView
        android:id="@+id/schedule_question_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule_question_one"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/schedule_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".35" />

    <TextView
        android:id="@+id/schedule_question_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule_question_two"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <EditText
        android:id="@+id/what_time_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="9"
        android:hint="@string/time"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".5" />

    <TextView
        android:id="@+id/schedule_question_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule_question_three"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".6" />

    <EditText
        android:id="@+id/what_time_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="11"
        android:hint="@string/time"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".65" />

    <TextView
        android:id="@+id/schedule_question_four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule_question_four"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="391dp"
        android:layout_height="58dp"
        app:chipSpacingHorizontal=".1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/schedule_questions"
        app:layout_constraintVertical_bias="0.78" >

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_sunday"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/S"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_monday"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/M"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_tuesday"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/T"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_wednesday"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/W"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_thursday"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/T"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_friday"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/F"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_saturday"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/S"
            android:textAlignment="center" />

    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/teal_700"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/btn_continue"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/schedule_questions"
        app:layout_constraintVertical_bias=".9" />

</androidx.constraintlayout.widget.ConstraintLayout>