<?xml version="1.0" encoding="utf-8"?>

<!--
Author: Tyrel Munro
Last updated: 30 October 2020
    Waking up questions page
        ConstraintLayout
        TextView for the "Waking Up" question page.
        TextView that asks the user "What sounds would you like to wake up to?".
        Button for the user to add Spotify integrations.
        Button for the user to add music files.
        Button for the user to add system alarms.
-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".controller.MainActivity" >

    <TextView
        android:id="@+id/waking_up_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waking_up_questions"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".3" />

    <TextView
        android:id="@+id/waking_up_question_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/waking_up_question_one"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <Button
        android:id="@+id/btn_add_spotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/add_spotify"
        android:textColor="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/waking_up_questions"
        app:layout_constraintVertical_bias="0.35" />

    <Button
        android:id="@+id/btn_add_system_alarms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/add_system_alarms"
        android:textColor="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/waking_up_questions"
        app:layout_constraintVertical_bias="0.65" />

    <Button
        android:id="@+id/btn_add_my_music_files"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/add_my_music_files"
        android:textColor="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/waking_up_questions"
        app:layout_constraintVertical_bias=".5" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/teal_700"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/btn_continue"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/waking_up_questions"
        app:layout_constraintVertical_bias=".9" />

</androidx.constraintlayout.widget.ConstraintLayout>