<?xml version="1.0" encoding="utf-8"?>

<!--
Author: Tyrel Munro
Last updated: 20 November 2020
    Add Music page
        ConstraintLayout
        Toolbar that holds an "X" button that when pressed sends the user back to the Schedules page.
            A check mark that accepts the schedule specifications from the page.
        TabLayout that holds three tabs: System, Spotify, and Local Files.
            Each tab will display its correlating xml page for specifying the sounds the user wants to use for their schedules.
        ViewPager for displaying the xml page for the tab that the user taps on within the TabLayout.
-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    android:foregroundTint="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_music_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/purple_500"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:title="@string/add_music"
        app:titleMarginStart="80dp"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIconTint="@color/white"
        app:tabIndicatorColor="@color/white"
        app:tabTextColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@android:drawable/stat_notify_sdcard"
            android:text="@string/system" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="?android:attr/listChoiceIndicatorSingle"
            android:text="@string/spotify" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="?attr/actionModeCopyDrawable"
            android:text="@string/local_files" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    <ImageButton
        android:id="@+id/add_music_check"
        style="@android:style/Widget.DeviceDefault.Light.ImageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="@color/purple_500"
        android:contentDescription="@string/settings"
        android:tint="@color/white"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_check_24"
        android:focusable="true"
        android:clickable="true" />

    <ImageButton
        android:id="@+id/add_music_cancel"
        style="@android:style/Widget.DeviceDefault.Light.ImageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="@color/purple_500"
        android:contentDescription="@string/overflow_menu"
        android:tint="@color/white"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_close_24"
        android:focusable="true"
        android:clickable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>